# itajuba

cv_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cv_utils/aruco_detector/: aruco_detector  aruco_detector.py
cv_utils/aruco_detector.py/: aruco_detector.py
cv_utils/base_detector/: base_detector.py
cv_utils/calibration_hsv/: calibration_hsv.py  extract_hsv_single.py
cv_utils/drone_lib/: CMakeLists.txt
cv_utils/drone_lib/include/drone/: Drone.hpp  SystemHealth.hpp
cv_utils/fase1/: README.md
cv_utils/fase1/include/fase1/: landing_state.hpp  precision_align_state.hpp  return_home_state.hpp  search_base_state.hpp
cv_utils/fase1/include/test/: tester_state.hpp
cv_utils/fase1/launch/: ground_station.launch.py  ground_station.rviz
cv_utils/fase1/src/: fase1.cpp
cv_utils/fase2/: CMakeLists.txt  package.xml
cv_utils/fase2/config/: fsm.yaml
cv_utils/fase2/include/fase2/: align_base_state.hpp  align_package_state.hpp  approach_package_state.hpp  goto_package_state.hpp  initial_takeoff_state.hpp  return_home_state.hpp  takeoff_state.hpp  vision_fase2.hpp
cv_utils/fase2/launch/: ground_station.launch.py
cv_utils/fase3/: __init__.py  casa.txt  circulo.txt  cruz.txt  estrela.txt  fase3_color_detector copy.py  fase3_color_detector.py  fase3_color_detector_debug.py  hexagono.txt  hsv_fase3.yaml  pentagono.txt  quadrado.txt  triangulo.txt
cv_utils/fase3/debug_output/: fase3_color_detector_parameters.txt
cv_utils/lane_detector/: lane_detector.py
cv_utils/pic_bases/: pic_bases.py
drone_lib/: CMakeLists.txt  package.xml
drone_lib/include/drone/: Drone.hpp
drone_lib/src/: Drone.cpp  system_health.cpp
fase1/: CMakeLists.txt  package.xml
fase1/config/: fsm.yaml  onboard.yaml  simulation.yaml
fase1/docs/: YAML_CONFIG.md
fase1/include/fase1/: Base.hpp  PidController.hpp  goto_base_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  precision_align_state.hpp  return_home_state.hpp  search_base_state.hpp  vision_fase1.hpp
fase1/include/fase1/states/: count_n_pic_state.hpp  return_home_state.hpp  search_base_state.hpp  takeoff_state.hpp
fase1/include/fase1/test/: tester_state.hpp
fase1/launch/: ground_station.launch.py  onboard.launch.py  simulation.launch.py
fase1/src/: fase1.cpp  fase1_tester.cpp
fase1_old/: CMakeL_old  package_old
fase1_old/config/: fsm.yaml
fase1_old/include/fase1/: ArenaPoint.hpp  GPS_Handler.hpp  bases.hpp  movement.hpp  vision_fase1.hpp
fase1_old/include/fase1/states/: align_with_base_state.hpp  landing_state.hpp
fase2/: CMakeLists.txt  package.xml
fase2/config/: fsm.yaml  ground_station.yaml  onboard.yaml
fase2/include/fase2/: ArenaPoint.hpp  arming_state.hpp  aruco_align_state.hpp  aruco_search_state.hpp  aruco_traverse_state.hpp  comandos.hpp  garra_state.hpp  goto_delivery_state.hpp  landing_state.hpp  lost_state.hpp  movement.hpp  takeoff_state.hpp  transformations.hpp  vision_fase2.hpp
fase2/launch/: onboard.launch.py  simulation.launch.py  simulation.rviz
fase2/src/: comandos.cpp  fase2.cpp
fase3/: CMakeLists.txt  package.xml
fase3/bezier_random/: generated_path.sdf
fase3/config/: fsm.yaml  ground_station.yaml  onboard.yaml
fase3/docs/: NORMALIZED_COORDINATES.md  PID_TUNING.md
fase3/include/fase3/: goto_base_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  precision_align_state.hpp  return_home_state.hpp  search_base_state.hpp  takeoff_state.hpp  vision_fase3.hpp
fase3/include/fase3/test/: tester_state.hpp
fase3/launch/: bases.txt  fase3.launch.py  fase3_complete.launch.py  ground_station.launch.py  onboard.launch.py  simulation.launch.py
fase3/src/: fase3.cpp  fase3_tester.cpp
fase4/: CMakeLists.txt  package.xml
fase4/bezier_random/: INFO.md  generate_random_path.py  generate_random_path.sh  generated_path.sdf  itajuba_fase4.sdf  simulate_example.sh  simulation_with_path.sh
fase4/config/: fsm.yaml
fase4/docs/: comando_para_rodar_a_fase4cpp.txt
fase4/include/fase4/: PidController.hpp  align_base_state.hpp  align_package_state.hpp  align_with_circle_state.hpp  approach_package_state.hpp  arming_state.hpp  follow_lane_state.hpp  goto_delivery_state.hpp  goto_package_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  lost_state.hpp  meia_volta_volver_state.hpp  return_home_state.hpp  search_lane_state.hpp  soltar_garra_state.hpp  takeoff_state.hpp  vision_fase4.hpp
fase4/launch/: ground_station.launch.py  ground_station.rviz  onboard.launch.py  simulation.launch.py
fase4/src/: fase4.cpp
itajuba_telemetry_handler/: README.md  package.xml  setup.cfg  setup.py
itajuba_telemetry_handler/network_metrics/: network_metrics.py
itajuba_telemetry_handler/telemetry_dashboard/: dashboard_gui.py  log_widgets.py  status_widgets.py  telemetry_dashboard.py
itajuba_telemetry_handler/telemetry_handler/: telemetry_handler.py
itajuba_telemetry_handler/telemetry_recorder/: telemetry_recorder.py
