<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>itajuba_telemetry_handler</name>
  <version>1.0.0</version>
  <description>Telemetry handling, visualization and recording package for drone systems</description>
  <maintainer email="ceccon@example.com">ceccon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <depend>rosbag2_py</depend>
  <depend>python3-tkinter</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-psutil</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
